--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test",
     "watch": "webpack -d --watch",
     "build": "webpack",
-    "serve": "serve ./public"
+    "start": "node index.js"
   },
   "keywords": [
     "react-router"
@@ -18,6 +18,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "express": "^4.14.0",
     "serve": "^1.4.0",
     "webpack": "^1.13.2"
   },
